# InvestQuantSystem

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.dashboard  Makefile  PLANS-backtest-engine.md  PLANS.md  docker-compose.dashboard.yml  pyproject.toml  quant_signal_system.md  requirements-akshare.txt  requirements.txt
docs/: development-environment.md  glossary.md
docs/architecture/: backtest-data-contracts.md  backtest-domain-model.md  backtest-execution-model.md  backtest-observability.md  backtest-phase2-design.md  backtest-phase3-design.md  backtest-phase4-design.md  backtest-phase5-design.md  backtest-phase6-design.md  backtest-phase7-design.md  backtest-target-architecture.md  backtest-testing-strategy.md  dashboard.md  data-contracts.md  development-guide.md  market-data-sources.md  module-design.md  strategy-plugin-guide.md  system-context.md  testing-and-evaluation.md
docs/benchmark/: benchmark-20260703.md
docs/contributing/: commit-convention.md
docs/decisions/: backtest-open-questions.md  open-questions.md
docs/input/: original-quant-signal-plan.md
docs/reviews/: backtest-current-state-audit.md  phase-1-review.md  phase-2-review.md  phase-3-review.md  phase-4-review.md  phase-5-review.md  phase-6-review.md  phase-7-review.md
docs/runbooks/: analyze-backtest-report.md  debug-backtest-mismatch.md  debug-data-quality.md  debug-signal-quality.md  recover-failed-backtest.md  run-backtest.md
scripts/: clean_duplicate_signals.py  setup_venv.ps1  test.ps1  test_signal_idempotency.py
src/invest_quant_system.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+169 files in other folders)
