[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-quant-system"
version = "0.1.0"
description = "Research-only short-horizon A-share signal system infrastructure."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "akshare>=1.16",
    "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
